--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,78 @@
         <item>C</item>
         <item>D</item>
     </string-array>
+
+    <string name="foodtype">Choose a FoodType</string>
+    <string-array name="foodtype_array">
+        <item>Veg</item>
+        <item>Non-Vage</item>
+        <item>Both</item>
+    </string-array>
+
+    <string name="collectiontime">Choose a FoodType</string>
+    <string-array name="collection_array">
+        <item>12.00 - 12.30 PM</item>
+        <item>12.30 - 1.00 PM</item>
+        <item>1.00 - 1.30 PM</item>
+        <item>1.30 - 2.00 PM</item>
+        <item>2.00 - 2.30 PM</item>
+        <item>2.30 - 3.00 PM</item>
+        <item>3.00 - 3.30 PM</item>
+        <item>3.30 - 4.00 PM</item>
+        <item>4.00 - 4.30 PM</item>
+        <item>4.30 - 5.00 PM</item>
+        <item>5.00 - 5.30 PM</item>
+        <item>5.30 - 6.00 PM</item>
+        <item>6.00 - 6.30 PM</item>
+        <item>6.30 - 7.00 PM</item>
+        <item>7.00 - 7.30 PM</item>
+        <item>7.30 - 8.00 PM</item>
+        <item>8.00 - 8.30 PM</item>
+        <item>8.30 - 9.00 PM</item>
+        <item>9.00 - 9.30 PM</item>
+        <item>9.30 - 10.00 PM</item>
+        <item>10.00 - 10.30 PM</item>
+        <item>10.30 - 11.00 PM</item>
+        <item>11.00 - 11.30 PM</item>
+        <item>11.30 - 12.00 PM</item>
+        <item>12.00 - 12.30 AM</item>
+        <item>12.30 - 1.00 AM</item>
+        <item>1.00 - 1.30 AM</item>
+        <item>8.00 - 8.30 PM</item>
+        <item>8.30 - 9.00 PM</item>
+        <item>9.00 - 9.30 PM</item>
+        <item>9.30 - 10.00 PM</item>
+        <item>10.00 - 10.30 PM</item>
+        <item>10.30 - 11.00 PM</item>
+        <item>11.00 - 11.30 PM</item>
+        <item>11.30 - 12.00 PM</item>
+        <item>12.00 - 12.30 AM</item>
+        <item>12.30 - 1.00 AM</item>
+        <item>1.00 - 1.30 AM</item>
+        <item>1.30 - 2.00 AM</item>
+        <item>2.00 - 2.30 AM</item>
+        <item>2.30 - 3.00 AM</item>
+        <item>3.00 - 3.30 AM</item>
+        <item>3.30 - 4.00 AM</item>
+        <item>4.00 - 4.30 AM</item>
+        <item>4.30 - 5.00 AM</item>
+        <item>5.00 - 5.30 AM</item>
+        <item>5.30 - 6.00 AM</item>
+        <item>6.00 - 6.30 AM</item>
+        <item>6.30 - 7.00 AM</item>
+        <item>7.00 - 7.30 AM</item>
+        <item>7.30 - 8.00 AM</item>
+        <item>8.00 - 8.30 AM</item>
+        <item>8.30 - 9.00 AM</item>
+        <item>9.00 - 9.30 AM</item>
+        <item>9.30 - 10.00 AM</item>
+        <item>10.00 - 10.30 AM</item>
+        <item>10.30 - 11.00 AM</item>
+        <item>11.00 - 11.30 AM</item>
+        <item>11.30 - 12.00 AM</item>
+    </string-array>
+
+
     <string name="title_activity_navigation">Navigation</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
